# CEconomyGame

./: CMakeLists.txt
data/: data.json
include/game/: balance.hpp  item.hpp  player.hpp  store.hpp  upgrade.hpp  work.hpp
include/json/: utils.hpp
src/: main.cpp
src/game/: balance.cpp  item.cpp  player.cpp  upgrade.cpp  work.cpp
src/json/: utils.cpp
